--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="drawer_item_about">О приложении</string>
     <string name="drawer_item_contacts">Контакты</string>
 
+    <string name="text_alarm">Внимание!</string>
     <string name="text_loading_video">Загружается стрим</string>
     <string name="text_loading">Загрузка</string>
     <string name="text_cancel">Отмена</string>
@@ -70,6 +71,7 @@
     <string name="text_instagram">Instagram</string>
     <string name="text_vk">ВКонтакте</string>
     <string name="text_ok">Одноклассники</string>
+    <string name="text_permission_denied">Вы должны разрешить чтение информации о телефоне, чтобы авторизироватся через соц. сети!</string>
 
     <string name="link_youtube">https://www.youtube.com/channel/UCYhyHb9tmpYwzeYFSu3Ty0Q</string>
     <string name="link_instagram">https://www.instagram.com/radiokidsfm/</string>
